# Yosoi

./: .coderabbit.yaml  .editorconfig  .gitignore  .gitinclude  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  AGENT_CONNECTION.md  CHANGELOG.md  CHEAT_SHEET.md  CHEAT_SHEET.txt  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DISCLAIMER.md  GEMINI.md  LICENSE.md  README.md  SPIKE.md  ai_reads_html.py  codecov.yml  docker-compose.langfuse.yml  docker-compose.sinks.yml  env.example  issues.md  llm_tracking.json  main.py  models.py  notes.md  opencode.json  package-lock.json  pyproject.toml  pyrefly-baseline.json  queue_state_5.json  recipe_demo.py  recipe_remote_demo.py  renovate.json  requirements.txt  scraper.py  scraper2.py  (+16 more)
.github/: CI.yaml  pull_request_template.md  pytest.yaml
.github/ISSUE_TEMPLATE/: 1_bug_report.yaml  3_question.yaml  ticket-template.md
.github/codeql/: codeql-config.yml
.github/workflows/: CI.yaml  codeql.yaml  codspeed.yaml  docs.yaml  lint.yaml  memory-bench.yaml  publish.yaml  security.yaml
.pi/extensions/: yosoi-workflows.ts
benchmarks/: audit_content.py  baseline.json  bench_all.py  bench_cleaner.py  bench_puppeteer.mjs  bench_vc_vs_zd.py  bench_yd_vs_zd.py  crawl_policy_scheduler_bench.py  crawl_policy_validation_bench.py  voidcrawl_memory_capacity.py
benchmarks/fixtures/: generate.py  qscrape_eshop.html  qscrape_news.html  qscrape_scoretap.html  qscrape_taxes.html  qscrape_taxes_search.html
docker/: Dockerfile  Dockerfile.headful  docker-compose.headful.yml  docker-compose.yml  entrypoint-headful.sh  run-headful.sh  warmup-chrome.sh
docker/config/: supervisord-headful.conf  supervisord.conf  sway-headful
docs/: a3node-replay.md  agent-workflows.md  executor-js-flow.md  extractors.md  fetch.md  fingerprinting-stack.md  flows.md  policy-files.md  recipes.md  voidcrawl.md
docs/plans/: field-atoms-next-time.md  generalize-interaction-heuristics.md  waterfall-fingerprint.md  ys-policies-p6.md
docs/research/: exa-research-positioning.md  fingerprint-generalization-findings.md  scrapling-adaptive-selectors.md
examples/: README.md  claude_sdk_example.py  concurrent_example.py  crawl_espn_articles.py  crawl_policy_article_candidates_usecase.py  crawl_policy_article_index_usecase.py  crawl_public_stress.py  crawl_qscrape_articles.py  crawl_qscrape_l2_news_articles.py  crawl_yahoo_finance.py  crawl_yahoo_finance_stress.py  custom_type.py  discovery_demo.py  dynamic_schema.py  edgar_download_example.py  extractor_fields.py  fingerprint_replay.py  js_fetcher_qscript_l2.py  live_bookstore.py  multi_item_example.py  opencode_example.py  opencode_server.py  openrouter_example.py  pai_schema_demo.py  pool_fetch_cleaned.py  pool_usage.py  reddit_comments_contract.py  replay_demo.py  scrape_qscrape_l2_news_articles.py  selector_cache_health_smoke.py  selector_discovery_race_smoke.py  selector_override_example.py  type_factories.py  types_schema.py  validators_example.py  ys_validators.py
examples/api_design/: contract_first_fingerprint_score.py  contract_first_live_fingerprint_score.py  fingerprint.py  fingerprint_mega_demo.py  fingerprint_score.py  map_api.py  policy_api_design.py  qscrape_fingerprint_juxtaposition.py  recipe_api.py  recipe_cli_demo.sh  recipe_pilot_checklist.md
examples/discrimination_gate/: serp_gate_demo.py
experiments/: alita_tech_detect.py  fingerprint_generalization.py  homewell_maps_results.csv  homewell_maps_reviews.py  homewell_maps_warmup.py  maps_js_review_count.py  mcp_warm_vs_cold.py  voidcrawl_memory_capacity.py
findings/: FINDINGS.md  W1.md  W2.md  W3.md  W4.md  W5-discovery-discrimination.md  W5.md  field-level-root.md  nimbal-template-scrape-issues.md  serp-blocks-discrimination.md
old_versions/: ai_reads_html.py  scraper.py  scraper2.py  scraper3.py  scraper4.py  scraper5.py
scripts/: bench_fetch_online.py  bench_preprocess.py  check_no_hardcoded_selectors.py  check_no_unittest.py  download_fixtures.py  eval_demo.py  fetch_preprocess_snapshots.py  generate_api_docs.py  post_bump.sh  scan_binary_licenses.py  snapshot_recorder.py
selectors/: selectors_africanews_com.json  selectors_businesswire_com.json  selectors_example_com.json  selectors_fda_gov.json  selectors_finance_yahoo_com.json  selectors_mediagazer_com.json  selectors_n4g_com.json  selectors_newsboiler-www-website_azurewebsites_net.json  selectors_techmeme_com.json  selectors_virginiabusiness_com.json  selectors_vulture_com.json  selectors_workspaceupdates_googleblog_com.json  selectors_wsj_com.json
src/yosoi/: __init__.py  (+11 more)
tests/: AGENTS.md  README.md  conftest.py
void_crawl/: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  build.sh  pyproject.toml  void_crawl.pyi
void_crawl/crates/core/: Cargo.toml
void_crawl/crates/core/src/: error.rs  lib.rs  page.rs  pool.rs  session.rs
void_crawl/crates/core/tests/: integration.rs
void_crawl/crates/pyo3_bindings/: Cargo.toml
void_crawl/crates/pyo3_bindings/src/: lib.rs
yosoi/: AGENTS.md  __init__.py  __init__.pyi  __main__.py  _javascript_modules.py  _lazy.py  agents.py  api.py  cleaner.py  cli.py  config.py  discovery.py  display.py  exceptions.py  executor.py  extractor.py  fetcher.py  flow.py  llm_config.py  models.py  operations.py  pipeline.py  policies.py  policies.pyi  recipe.py  reporting.py  research.py  storage.py  tasks.py  validator.py  validators.py  verifier.py
yosoi_driver/: AGENTS.md  CONTRIBUTING.md  LICENSE.md  README.md  build.sh  pyproject.toml  yosoi_driver.pyi
yosoi_driver/crates/core/: Cargo.toml
yosoi_driver/crates/core/src/: error.rs  lib.rs  page.rs  pool.rs  session.rs  stealth.rs
yosoi_driver/crates/core/tests/: integration.rs
yosoi_driver/crates/pyo3_bindings/: Cargo.toml
yosoi_driver/crates/pyo3_bindings/src/: lib.rs
yosoi_driver/docs/: api-reference.md  architecture.md  docker-headful.md  getting-started.md  stealth.md
yosoi_driver/examples/: basic_navigation.py  connect_to_existing_chrome.py  custom_headers_and_proxy.py  docker_headful.py  dom_and_interaction.py  javascript_eval.py  multi_page.py  screenshot_and_pdf.py  stealth_mode.py
(+760 files in other folders)
