[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.1" ]

[project]
name = "yosoi"
version = "0.0.1a16"
description = "AI-Powered Selector Discovery - Discover once, scrape forever"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "beautifulsoup4>=4.14",
  "brotli>=1.2",
  "click>=8.3",
  "dateparser>=1.4",
  "httpx>=0.28.1",
  "langfuse>=4.5.1",
  "lxml>=6.0.2",
  "opentelemetry-exporter-otlp-proto-http>=1.39.1",
  "opentelemetry-sdk>=1.39.1",
  "parsel>=1.11",
  "pydantic>=2",
  "pydantic-ai-slim[anthropic,bedrock,cerebras,google,groq,huggingface,mistral,openai,openrouter,vertexai,xai]>=1.74",
  "python-dotenv>=1.2.2",
  "rich>=14.3",
  "rich-click>=1.9.7",
  "taskiq>=0.12.1",
  "tenacity>=9.1.4",
]
optional-dependencies.tabular = [ "openpyxl>=3.1", "pandas>=2", "pyarrow>=14" ]
urls.Changelog = "https://github.com/CascadingLabs/Yosoi/blob/main/CHANGELOG.md"
urls.Homepage = "https://cascadinglabs.com/yosoi/"
urls.Issues = "https://github.com/CascadingLabs/Yosoi/issues"
urls.Repository = "https://github.com/CascadingLabs/Yosoi"
scripts.yosoi = "yosoi.cli:main"

[dependency-groups]
dev = [
  "commitizen>=4.13",
  "griffe>=2",
  "memray>=1.19.2",
  "mypy>=1.19",
  "nodriver>=0.48.1",
  "pip-licenses>=5.5.5",
  "playwright>=1.58",
  "poethepoet>=0.42",
  "prek>=0.3.8",
  "psutil>=7.2.2",
  "ruff>=0.15",
  "types-beautifulsoup4>=4.12",
  "types-dateparser>=1.4.0.20260328",
  "vulture>=2.16",
  "zendriver>=0.15.3",
]
tests = [
  "deepeval>=3.9",
  "dirty-equals>=0.11",
  "mutmut>=3.5",
  "openpyxl>=3.1",
  "pandas>=2",
  "poethepoet>=0.42",
  "polyfactory>=3.3",
  "pyarrow>=14",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3",
  "pytest-cov>=7.1",
  "pytest-mock>=3.15.1",
  "pytest-sugar>=1.1.1",
  "pytest-xdist>=3.8",
  "respx>=0.22",
  "syrupy>=5.1",
  "testcontainers>=4.14.2",
]

[tool.uv]
package = true
build-backend.module-name = "yosoi"
build-backend.module-root = "" # This tells uv the package is in the root, not src/
build-backend.source-exclude = [
  "tests/**",
  "docs/**",
  "examples/**",
  "benchmarks/**",
  "**/*.pyc",
  "**/__pycache__",
  ".venv/**",
  ".env",
  ".env.example",
  ".yosoi/**",
  ".ruff_cache/**",
  ".pytest_cache/**",
  ".mypy_cache/**",
  "uv.lock",
  "AGENTS.md",
  "urls.txt",
  "CONTRIBUTING.md",
]

[tool.ruff]
target-version = "py310"
line-length = 120
indent-width = 4
format.quote-style = "single"
format.line-ending = "auto"
format.skip-magic-trailing-comma = false
lint.select = [
  "ARG",   # flake8-unused-arguments
  "ASYNC", # flake8-async
  "B",     # flake8-bugbear
  "BLE",   # flake8-blind-except (no bare `except Exception`)
  "C4",    # flake8-comprehensions
  "C901",  # mccabe complexity
  "D",     # pydocstyle
  "E",     # pycodestyle errors
  "F",     # pyflakes
  "G",     # flake8-logging-format (lazy % formatting in log calls)
  "I",     # isort
  "PERF",  # performance
  "PT",    # flake8-pytest-style
  "RET",   # flake8-return
  "RUF",   # ruff-specific rules
  "SIM",   # flake8-simplify
  "TID",   # flake8-tidy-imports
  "UP",    # pyupgrade
  "W",     # pycodestyle warnings
]
lint.ignore = [
  "ARG001", # unused args are common in dynamic APIs
  "B008",   # allow function calls in defaults when intentional
  "D203",   # conflicts with D211 and the ruff formatter
  "D211",
  "D213",
  "E402",   # module level import not at top of file
  "E501",   # formatter handles line length
  "RET504", # allow implicit return None
  "RUF001", # ambigious variable name
  "SIM108", # allow if-else instead of ternary
  "W293",   # blank line contains whitespace
]
lint.per-file-ignores."__init__.py" = [ "F401" ]
lint.per-file-ignores."examples/**/*.py" = [ "BLE", "D" ]
lint.per-file-ignores."tests/**/*.py" = [
  "ARG001", # unused arguments in test functions
  "ARG002", # unused method arguments in tests
  "ARG004", # unused static method arguments in tests (coerce stubs)
  "D",      # pydocstyle - no docstrings required for tests
]
lint.per-file-ignores."yosoi/cli/args.py" = [ "ARG002" ] # Click ParamType method overrides require unused params
lint.per-file-ignores."yosoi/core/cleaning/cleaner.py" = [ "C901" ]
lint.isort.known-first-party = [ "yosoi" ]
lint.mccabe.max-complexity = 12
lint.pydocstyle.convention = "google"

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.asyncio_mode = "auto"
ini_options.markers = [
  "eval: mark test as an evaluation test (requires real LLM and is slow)",
]

[tool.coverage]
run.omit = [
  "yosoi/*/*/__init__.py",
  "yosoi/*/__init__.py",
  "yosoi/__main__.py",
  "yosoi/cli/__main__.py",
]
run.source = [ "yosoi" ]
report.exclude_lines = [
  "\\.\\.\\.",                 # Protocol method bodies (just `...`)
  "def __repr__",
  "if __name__ == .__main__.",
  "if TYPE_CHECKING:",
  "pragma: no cover",
  "raise NotImplementedError",
]
report.fail_under = 93
report.show_missing = true

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_unused_ignores = false
exclude = [
  "mutants/",
]

[tool.pip-licenses]
from = "mixed"
ignore-packages = [
  "yosoi",               # this project
  "mistralai",           # Apache-2.0 (missing metadata, verified via GitHub)
  "taskiq-dependencies", # MIT (missing metadata, verified via GitHub)
]
allow-only = """\
  Apache Software License;Apache-2.0;Apache-2.0 AND MIT;Apache-2.0 AND CNRI-Python;Apache-2.0 OR BSD-3-Clause;Apache \
  License 2.0;MIT;MIT License;MIT AND PSF-2.0;BSD License;BSD-2-Clause;BSD-3-Clause;BSD-3-Clause AND 0BSD AND MIT AND \
  Zlib AND CC0-1.0;3-Clause BSD License;ISC;ISC License (ISCL);PSF-2.0;Python Software Foundation \
  License;MPL-2.0;MPL-2.0 AND MIT;Mozilla Public License 2.0 (MPL 2.0);The Unlicense (Unlicense);BSD License; GNU \
  General Public License (GPL); Public Domain;Apache Software License; BSD License;Apache Software License; MIT License\
  """
partial-match = true

[tool.mutmut]
paths_to_mutate = [ "yosoi/" ]
tests_dir = [ "tests/unit/" ]
debug = true

[tool.gitleaks]
[[tool.gitleaks.allowlist]]
paths = [
  ".*\\.md$",
]
regexes = [
  "llama-3\\.3-70b-versatile", # Model name, not a secret
  "gemini-2\\.0-flash-exp",    # Model name, not a secret
]

# Configuration for Gitleaks moved to pyproject.toml
[[tool.gitleaks.rules]]
id = "generic-api-key"
description = "Generic API Key"
regex = "(?i)(?:key|api|token|secret|password)[\\s]*[=:>]{1}[\\s]*['\"]?([a-z0-9_\\-]{20,})['\"]?"
entropy = 4.5

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621" # Reads/updates version in [project] section of pyproject.toml
version_files = [ "CITATION.cff:^version" ]
update_changelog_on_bump = true
major_version_zero = true # Keeps you in 0.x.x (beta) semantics
post_bump_hooks = [ "bash scripts/post_bump.sh" ]
types = [
  { value = "feat", name = "feat: A new feature" },
  { value = "fix", name = "fix: A bug fix" },
  { value = "docs", name = "docs: Documentation only changes" },
  { value = "style", name = "style: Formatting (ruff, black, etc)" },
  { value = "refactor", name = "refactor: Code change that neither fixes a bug nor adds a feature" },
  { value = "perf", name = "perf: A code change that improves performance" },
  { value = "test", name = "test: Adding or correcting tests" },
  { value = "build", name = "build: Changes that affect the build system (uv, pyproject.toml)" },
  { value = "ci", name = "ci: CI configuration (GitHub Actions)" },
  { value = "chore", name = "chore: Other changes that don't modify src or test files" },
]

[tool.poe]
tasks.eval = 'uv run pytest -m "eval"' # run deepeval tests
tasks.integration = "uv run pytest -m 'integration'" # run integration tests
tasks.unit = "uv run pytest -m 'unit'" # run unit tests
tasks.ci-test = "uv run pytest tests/unit/ tests/stubs/ -m 'not eval' --cov=yosoi --cov-branch --cov-report=xml" # unit + stub tests with coverage
tasks.ci-format = "uv run ruff check --fix"
tasks.coverage = "uv run pytest --cov=yosoi --cov-report=term-missing --cov-report=html tests/"
tasks.mutmut-run = "uv run mutmut run"
tasks.mutmut-results = "uv run mutmut results"
tasks.licenses = "uv run pip-licenses" # check dependency licenses
tasks.docs = "uv run python scripts/generate_api_docs.py --output-dir ../CascadingLabsFE/docs/yosoi-docs/reference" # generate split API reference with GitHub source links
tasks.bump = "uv run cz bump --yes" # auto-detect from conventional commits
tasks.bump-dry = "uv run cz bump --dry-run" # preview what the next bump would be
tasks.bump-alpha = "uv run cz bump --increment PATCH --prerelease alpha --yes" # next alpha pre-release (e.g. 0.0.1a15 → 0.0.1a16)
tasks.bump-beta = "uv run cz bump --increment PATCH --prerelease beta --yes" # next beta pre-release (e.g. 0.0.1a15 → 0.0.1b0)
tasks.bump-patch = "uv run cz bump --increment PATCH --yes" # patch release (e.g. 0.0.1a14 → 0.0.1)
tasks.bump-minor = "uv run cz bump --increment MINOR --yes" # minor release (e.g. 0.0.1a14 → 0.1.0)
tasks.bump-major = "uv run cz bump --increment MAJOR --yes" # major release (e.g. 0.0.1a14 → 1.0.0)
tasks.ci-check.sequence = [
  { cmd = "uv run prek run --all-files --hook-stage manual --show-diff-on-failure" },
  { ref = "ci-test" },
]
