[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.1" ]

[project]
name = "yosoi"
version = "0.0.1a17"
description = "AI-Powered Selector Discovery - Discover once, scrape forever"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "aiofiles>=25.1",
  "brotli>=1.2",
  "claude-agent-sdk>=0.2.87",
  "click>=8.3",
  "cssselect>=1.4",
  "dateparser>=1.4",
  "fastmcp>=3.3.1",
  "httpx>=0.28.1",
  "langfuse>=4.5.1",
  "lxml>=6.0.2",
  "opentelemetry-exporter-otlp-proto-http>=1.39.1",
  "opentelemetry-sdk>=1.39.1",
  "parsel>=1.11",
  "pydantic>=2",
  "pydantic-ai-slim[google,groq,openai,openrouter]>=1.74",
  "python-dotenv>=1.2.2",
  "rich>=14.3",
  "rich-click>=1.9.7",
  "taskiq>=0.12.1",
  "tenacity>=9.1.4",
  "voidcrawl>=0.3.3",
]
optional-dependencies.all = [
  "pydantic-ai-slim[anthropic,bedrock,google,groq,huggingface,mistral,openai,openrouter,vertexai,xai]>=1.74",
]
# Provider SDKs ship as optional extras to keep the base install slim. The base
# default-chain providers (groq, gemini/google, cerebras, openai, openrouter) are
# always available; these add heavyweight SDKs only when the user opts in.
optional-dependencies.anthropic = [ "pydantic-ai-slim[anthropic]>=1.74" ]
optional-dependencies.bedrock = [ "pydantic-ai-slim[bedrock]>=1.74" ]
optional-dependencies.huggingface = [ "pydantic-ai-slim[huggingface]>=1.74" ]
optional-dependencies.mistral = [ "pydantic-ai-slim[mistral]>=1.74" ]
optional-dependencies.tabular = [ "openpyxl>=3.1", "pandas>=2", "pyarrow>=14" ]
optional-dependencies.vertexai = [ "pydantic-ai-slim[google,vertexai]>=1.74" ]
optional-dependencies.xai = [ "pydantic-ai-slim[xai]>=1.74" ]
urls.Changelog = "https://github.com/CascadingLabs/Yosoi/blob/main/CHANGELOG.md"
urls.Homepage = "https://cascadinglabs.com/yosoi/"
urls.Issues = "https://github.com/CascadingLabs/Yosoi/issues"
urls.Repository = "https://github.com/CascadingLabs/Yosoi"
scripts.yosoi = "yosoi.cli:main"
scripts.yosoi-validator-mcp = "yosoi.integrations.validator_mcp:main"

[dependency-groups]
dev = [
  "commitizen>=4.13",
  "coverage>=7.13.5",
  "diff-cover>=9.7",
  "griffe>=2",
  "memray>=1.19.2",
  "mypy>=1.19",
  "pip-licenses>=5.5.5",
  "poethepoet>=0.42",
  "prek>=0.3.8",
  "psutil>=7.2.2",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3",
  "pytest-cov>=7.1",
  "pytest-mock>=3.15.1",
  "respx>=0.22",
  "ruff>=0.15",
  "types-aiofiles>=25.1.0.20260518",
  "types-dateparser>=1.4.0.20260328",
  "vulture>=2.16",
]
tests = [
  "dirty-equals>=0.11",
  "mutmut>=3.5",
  "openpyxl>=3.1",
  "pandas>=2",
  "poethepoet>=0.42",
  "polyfactory>=3.3",
  "pyarrow>=14",
  "pydantic-evals>=1.87",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3",
  "pytest-codspeed>=5.0.3",
  "pytest-cov>=7.1",
  "pytest-mock>=3.15.1",
  "pytest-sugar>=1.1.1",
  "pytest-xdist>=3.8",
  "respx>=0.22",
  "syrupy>=5.1",
  "testcontainers>=4.14.2",
]

[tool.uv]
package = true
build-backend.module-name = "yosoi"
build-backend.module-root = ""  # This tells uv the package is in the root, not src/
build-backend.source-exclude = [
  "tests/**",
  "docs/**",
  "examples/**",
  "benchmarks/**",
  "**/*.pyc",
  "**/__pycache__",
  ".venv/**",
  ".env",
  ".env.example",
  ".yosoi/**",
  ".ruff_cache/**",
  ".pytest_cache/**",
  ".mypy_cache/**",
  "uv.lock",
  "AGENTS.md",
  "urls.txt",
  "CONTRIBUTING.md",
]

[tool.ruff]
target-version = "py310"
line-length = 120
indent-width = 4
format.quote-style = "single"
format.line-ending = "auto"
format.skip-magic-trailing-comma = false
lint.select = [
  "ARG",   # flake8-unused-arguments
  "ASYNC", # flake8-async
  "B",     # flake8-bugbear
  "BLE",   # flake8-blind-except (no bare `except Exception`)
  "C4",    # flake8-comprehensions
  "C901",  # mccabe complexity
  "D",     # pydocstyle
  "E",     # pycodestyle errors
  "F",     # pyflakes
  "G",     # flake8-logging-format (lazy % formatting in log calls)
  "I",     # isort
  "PERF",  # performance
  "PT",    # flake8-pytest-style
  "RET",   # flake8-return
  "RUF",   # ruff-specific rules
  "SIM",   # flake8-simplify
  "TID",   # flake8-tidy-imports
  "UP",    # pyupgrade
  "W",     # pycodestyle warnings
]
lint.ignore = [
  "ARG001", # unused args are common in dynamic APIs
  "B008",   # allow function calls in defaults when intentional
  "D203",   # conflicts with D211 and the ruff formatter
  "D211",
  "D213",
  "E402",   # module level import not at top of file
  "E501",   # formatter handles line length
  "RET504", # allow implicit return None
  "RUF001", # ambigious variable name
  "SIM108", # allow if-else instead of ternary
  "W293",   # blank line contains whitespace
]
lint.per-file-ignores."__init__.py" = [ "F401" ]
lint.per-file-ignores."benchmarks/**/*.py" = [ "BLE", "D" ]  # standalone memory-bench harness
lint.per-file-ignores."examples/**/*.py" = [ "BLE", "D" ]
lint.per-file-ignores."tests/**/*.py" = [
  "ARG001",   # unused arguments in test functions
  "ARG002",   # unused method arguments in tests
  "ARG004",   # unused static method arguments in tests (coerce stubs)
  "ASYNC230", # tests legitimately do blocking file I/O for setup/assertions inside async tests
  "ASYNC240", # tests legitimately use os.path/pathlib for setup/assertions inside async tests
  "D",        # pydocstyle - no docstrings required for tests
]
lint.per-file-ignores."yosoi/cli/args.py" = [ "ARG002" ]  # Click ParamType method overrides require unused params
lint.per-file-ignores."yosoi/core/cleaning/cleaner.py" = [ "C901" ]
lint.flake8-tidy-imports.banned-api."unittest.mock".msg = "Use pytest-mock's `mocker` fixture instead of unittest.mock."
lint.flake8-tidy-imports.banned-api.unittest.msg = "Use pytest. The unittest stdlib module is banned project-wide; see scripts/check_no_unittest.py."
lint.isort.known-first-party = [ "yosoi" ]
lint.mccabe.max-complexity = 12
lint.pydocstyle.convention = "google"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_unused_ignores = false
exclude = [
  "mutants/",
]

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.asyncio_mode = "auto"
ini_options.markers = [
  "eval: mark test as an evaluation test (requires real LLM and is slow)",
  "smoke: mark test as an opt-in live smoke test",
]

[tool.coverage]
run.omit = [
  "yosoi/*/*/__init__.py",
  "yosoi/*/__init__.py",
  "yosoi/__main__.py",
  "yosoi/cli/__main__.py",
  "yosoi/core/fetcher/dom/*",
  "yosoi/core/fetcher/dom/tree/*",
  "yosoi/core/fetcher/voiddriver.py",
  "yosoi/core/fetcher/waterfall.py",
]
run.source = [ "yosoi" ]
report.exclude_lines = [
  "\\.\\.\\.",                    # Protocol method bodies (just `...`)
  "def __repr__",
  "if __name__ == .__main__.",
  "if TYPE_CHECKING:",
  "pragma: no cover",
  "raise NotImplementedError",
]
report.fail_under = 93
report.show_missing = true

[tool.pip-licenses]
from = "mixed"
ignore-packages = [
  "yosoi",               # this project
  "mistralai",           # Apache-2.0 (missing metadata, verified via GitHub)
  "taskiq-dependencies", # MIT (missing metadata, verified via GitHub)
]
# Permissive allow-list. MPL-2.0 is intentionally allowed: it is weak/file-level
# copyleft and only reaches us via unremovable transitive deps (certifi <- httpx,
# tqdm <- openai, pathspec <- mypy), none of which we fork.
# WARNING: `allow-only` is split on ';'. Never paste a package's *compound* classifier
# string (e.g. "BSD License; GNU General Public License (GPL); Public Domain") in whole
# — it fragments into separate tokens and silently allows GPL. Add a single canonical
# token, or use `ignore-packages` for a specific dep. `fail-on` below is the backstop.
allow-only = """\
  Apache Software License;Apache-2.0;Apache-2.0 AND MIT;Apache-2.0 AND CNRI-Python;Apache-2.0 OR BSD-3-Clause;Apache \
  License 2.0;MIT;MIT License;MIT AND PSF-2.0;BSD License;BSD-2-Clause;BSD-3-Clause;BSD-3-Clause AND 0BSD AND MIT AND \
  Zlib AND CC0-1.0;3-Clause BSD License;ISC;ISC License (ISCL);PSF-2.0;Python Software Foundation \
  License;MPL-2.0;MPL-2.0 AND MIT;Mozilla Public License 2.0 (MPL 2.0);The Unlicense (Unlicense);Apache Software \
  License; BSD License;Apache Software License; MIT License\
  """
# Hard denylist — copyleft families we will not ship, regardless of `allow-only`.
# (MPL deliberately excluded; see note above.) With partial-match, "GPL" also catches
# LGPL/AGPL. This is what keeps a re-pasted compound string from leaking GPL again.
fail-on = "GPL;LGPL;AGPL"
partial-match = true

[tool.mutmut]
paths_to_mutate = [ "yosoi/" ]
tests_dir = [ "tests/unit/" ]
debug = true

[tool.gitleaks]
[[tool.gitleaks.allowlist]]
paths = [
  ".*\\.md$",
]
regexes = [
  "llama-3\\.3-70b-versatile", # Model name, not a secret
  "gemini-2\\.0-flash-exp",    # Model name, not a secret
]

# Configuration for Gitleaks moved to pyproject.toml
[[tool.gitleaks.rules]]
id = "generic-api-key"
description = "Generic API Key"
regex = "(?i)(?:key|api|token|secret|password)[\\s]*[=:>]{1}[\\s]*['\"]?([a-z0-9_\\-]{20,})['\"]?"
entropy = 4.5

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"  # Reads/updates version in [project] section of pyproject.toml
version_files = [ "CITATION.cff:^version" ]
update_changelog_on_bump = true
major_version_zero = true  # Keeps you in 0.x.x (beta) semantics
post_bump_hooks = [ "bash scripts/post_bump.sh" ]
types = [
  { value = "feat", name = "feat: A new feature" },
  { value = "fix", name = "fix: A bug fix" },
  { value = "docs", name = "docs: Documentation only changes" },
  { value = "style", name = "style: Formatting (ruff, black, etc)" },
  { value = "refactor", name = "refactor: Code change that neither fixes a bug nor adds a feature" },
  { value = "perf", name = "perf: A code change that improves performance" },
  { value = "test", name = "test: Adding or correcting tests" },
  { value = "build", name = "build: Changes that affect the build system (uv, pyproject.toml)" },
  { value = "ci", name = "ci: CI configuration (GitHub Actions)" },
  { value = "chore", name = "chore: Other changes that don't modify src or test files" },
]

[tool.poe]
tasks.eval = 'uv run pytest -m "eval"'  # run pydantic-evals eval tests
tasks.obs-eval = "uv run pytest tests/evals/observability/"  # deterministic observability span-contract eval set (no live LLM)
tasks.bench = "uv run pytest tests/benchmarks --codspeed"  # run CodSpeed perf benchmarks (walltime locally)
tasks.integration = "uv run pytest -m 'integration'"  # run integration tests
tasks.unit = "uv run pytest -m 'unit'"  # run unit tests
tasks.ci-test = "uv run pytest tests/unit/ tests/stubs/ -m 'not eval' --cov=yosoi --cov-branch --cov-report=xml"  # unit + stub tests with coverage
tasks.patch-cov = "uv run diff-cover coverage.xml --compare-branch=main --fail-under=93"  # local mirror of Codecov patch coverage (run after ci-test)
tasks.ci-format = "uv run ruff check --fix"
tasks.coverage = "uv run pytest --cov=yosoi --cov-report=term-missing --cov-report=html tests/"
tasks.mutmut-run = "uv run mutmut run"
tasks.mutmut-results = "uv run mutmut results"
tasks.licenses = "uv run pip-licenses"  # check declared dependency licenses (metadata gate)
tasks.licenses-binary = "uv run python scripts/scan_binary_licenses.py --skip claude_agent_sdk/_bundled"  # scan bundled native deps for vendored copyleft; skip claude_agent_sdk/_bundled (bundled AGPL CLI tool, not shipped in yosoi's wheel)
tasks.docs = "uv run python scripts/generate_api_docs.py --output-dir ../CascadingLabsFE/docs/yosoi-docs/reference"  # generate split API reference with GitHub source links
tasks.bump = "uv run cz bump --yes"  # auto-detect from conventional commits
tasks.bump-dry = "uv run cz bump --dry-run"  # preview what the next bump would be
tasks.bump-alpha = "uv run cz bump --increment PATCH --prerelease alpha --yes"  # next alpha pre-release (e.g. 0.0.1a15 → 0.0.1a17)
tasks.bump-beta = "uv run cz bump --increment PATCH --prerelease beta --yes"  # next beta pre-release (e.g. 0.0.1a15 → 0.0.1b0)
tasks.bump-patch = "uv run cz bump --increment PATCH --yes"  # patch release (e.g. 0.0.1a14 → 0.0.1)
tasks.bump-minor = "uv run cz bump --increment MINOR --yes"  # minor release (e.g. 0.0.1a14 → 0.1.0)
tasks.bump-major = "uv run cz bump --increment MAJOR --yes"  # major release (e.g. 0.0.1a14 → 1.0.0)
tasks.ci-check.sequence = [
  { cmd = "uv run prek run --all-files --hook-stage manual --show-diff-on-failure" },
  { ref = "ci-test" },
]
