[package]
name = "yosoi_driver"
version = "0.0.1-beta.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "PyO3 bindings for yosoi_driver_core"

[lib]
name = "yosoi_driver"
crate-type = ["cdylib"]

[dependencies]
yosoi_driver_core = { path = "../core" }
pyo3 = { version = "0.28", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["sync"] }
serde_json = "1"
